fix lock